# ssafy_ai_challenge

./: .gitignore  CLAUDE.md  README.md  STRATEGY.md  claude-progress.txt  experiments.json  pyproject.toml  ssafy_vqa_experiment_tracker_template.csv  ssafy_vqa_final_strategy.md  ssafy_vqa_h100_top1.ipynb  ssafy_vqa_next_step_execution_playbook.md  ssafy_vqa_qwen25vl_h100_topscore_notebook_colab.ipynb  ssafy_vqa_qwen25vl_h100_topscore_notebook_local.ipynb  ssafy_vqa_qwen3vl_colab_h100.ipynb  ssafy_vqa_qwen3vl_h100_topscore.ipynb  ssafy_vqa_qwen3vl_h100_topscore_claude.ipynb  ssafy_vqa_topscore_strategy_plan_discussion_reflected.md
.omc/: NOTEBOOK_CONTEXT.md  prd.json  project-memory.json
.omc/plans/: open-questions.md  vqa-competition-notebook.md  vqa-competition-top1-h100.md  vqa-competition-top1.md  vqa-hybrid-top1-final.md
.omc/sessions/: 009dadac-a421-4612-b882-581a9a7bc1df.json  220396f9-b722-4da2-93ae-39fd85cad029.json  34daaa81-4c3e-4006-9619-c3cea6b86f44.json  42c82b8b-bd6b-4afe-a866-b3f3966e1d73.json  4cc0cfd5-541c-4e70-a925-fe7ba2a2da25.json  4e0c12b7-ae4c-416c-9159-ae3873ab76cd.json  5cdd3059-ca51-4c14-8e42-6b278517a3fa.json  5f647abe-8bf0-4dc6-a7f0-3f0182dd212c.json  693e4b93-6bf8-4f71-95c9-e48373b57fb7.json  6a0c396b-c687-4c1a-9626-7aef82c89b70.json  75a5fe5b-2ca8-4837-ae7b-820b7cf89ce7.json  888ffddb-365d-4493-8ca5-01fc338a7858.json  8e9dde77-565d-41f7-8442-b575e84619a2.json  930036f5-ddaf-430f-9de8-da699757d9b0.json  9389fdc5-dc14-4459-956e-9e687a49e3fc.json  9dfa0c07-4f4b-40bb-a707-690421aaa3ee.json  a6a7cc02-7437-4e34-8b36-bec9e6030ecd.json  acd56d80-8e8f-463b-b6c2-bb0f777a9722.json  b5c78149-538d-440b-9f6b-33b35fddcb62.json  c6c68720-b99f-4b8e-8d17-1b9bc46a365a.json  d3351945-ba22-4fe0-84b2-ad1b6eb5cce5.json  f2ae39c2-1eec-4cfa-8ea8-b1828e518f1f.json  f2e48164-14e0-4a2f-846f-1a792978f8ed.json
.omc/specs/: deep-interview-vqa-top1.md
.omc/state/: agent-replay-4cc0cfd5-541c-4e70-a925-fe7ba2a2da25.jsonl  agent-replay-4e0c12b7-ae4c-416c-9159-ae3873ab76cd.jsonl  agent-replay-5cdd3059-ca51-4c14-8e42-6b278517a3fa.jsonl  agent-replay-5f647abe-8bf0-4dc6-a7f0-3f0182dd212c.jsonl  hud-state.json  hud-stdin-cache.json  (+4 more)
.omx/: metrics.json
baseline/: (260325)_baseline_desktop5060ti.ipynb
csv/: train.csv
state/: cancel-signal-state.json
(+39 files in other folders)
